workloads/GKE-ts/echo-rc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev

apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoheaders
  labels:
    app: echoheader
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echoheader
  template:
    metadata:
      labels:
        app: echoheader
    spec:
      containers:
      - name: echoheaders
        image: gcr.io/google_containers/echoserver:1.4
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
