workloads/GKE-ts/mongoose.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mounter
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mounter
  namespace: mounter
spec:
  replicas: 3
  selector:
    matchLabels:
      mount: volume
  template:
    metadata: 
      labels:
        mount: volume
    spec:
      containers:
      - name: volume-required
        image: httpd
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
        volumeMounts:
        - mountPath: /var/www/html
          name: mountedVolume
      volumes:
      - configMap:
          name: apache-index
        name: mountedVolume
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: generic-workload
  labels:
    app: generic
spec:
  replicas: 4
  selector:
    matchLabels:
      app: generic
  template:
    metadata:
      labels:
        app: generic
      spec:
        affinity:
          podAntiAffinity:
            preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 75
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                  - key: app
                    operators: In
                    values:
                    - generic
                topologyKey: kubernetes.io/hostname
        containers:
        - name: generic-app
          image: nginx:alpine
          resources:
            requests:
              cpu: 25m
              memory: 25Mi
